tests/paczka1/fuzzy1/19007025.err
Error in line 1: xZ8VZ A351 65,7
Error in line 6: Yvuo9 S979 11,1
Error in line 4: aItP4pePc60 S532 29,1
Error in line 5: A351 S532 81,8
Error in line 12: A351 A351 484,1
Error in line 16: A351 S532 75,5
Error in line 24: 91XVulPuroP S532 79,9
Error in line 26: 91XVulPuroP S979 54,9
Error in line 28: 4X0ysaw A469 98,8
Error in line 36: aItP4pePc60 A46R 31,8
